[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = { version = "*", features = ["derive"] }
whiteread = "0.5.0"
itertools = "0.9.0"
num = "0.2.1"
superslice = "1.0.0"
ndarray = "0.13.0"
ordered-float = "1.0.2"
ac-library-rs = "0.1.1"
